fix: foreword test align

--- a/css/foreword.css
+++ b/css/foreword.css
@@ -1,6 +1,5 @@
 .container_foreword {
     display: flex;
-    align-items: center;
     /* width: 100%; */
     height: 85vh;
 }
@@ -10,7 +9,6 @@
 .foreword_left {
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
     flex-grow: 1;
     height: 100%;
@@ -47,6 +45,7 @@
 }
 
 .foreword_info_input {
+    margin-top: 5vh;
     width: 335px;
     height: 19px;
     font-family: 'Mada';
